--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@android:style/Theme.Black.NoTitleBar"
         android:screenOrientation="landscape" >
         <activity
             android:name="com.stu.ihelp.client.IHelpActivity"
