--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,11 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="landscape"
         android:theme="@android:style/Theme.Black.NoTitleBar" >
-        <activity android:name="edu.stu.ihelp.client.IHelpActivity" >
+        <activity
+            android:name="edu.stu.ihelp.client.IHelpActivity"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
