--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,11 +27,9 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="landscape"
+        android:screenOrientation="unspecified"
         android:theme="@android:style/Theme.Black.NoTitleBar" >
-        <activity
-            android:name="edu.stu.ihelp.client.IHelpActivity"
-            android:screenOrientation="landscape" >
+        <activity android:name="edu.stu.ihelp.client.IHelpActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
