--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,13 +27,18 @@
         android:label="@string/app_name"
         android:screenOrientation="unspecified"
         android:theme="@android:style/Theme.Black.NoTitleBar" >
-        <activity android:name="edu.stu.ihelp.client.IHelpActivity" >
+        <activity
+            android:name=".iHELP"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".IHelpActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
         <activity
             android:name=".PersonalData"
             android:screenOrientation="portrait"
