--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="unspecified"
         android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name=".iHELP"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,12 +38,13 @@
         </activity>
         <activity
             android:name=".IHelpActivity"
-            android:theme="@android:style/Theme.NoTitleBar" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PersonalData"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan" />
-        <activity android:name=".General" />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".General"
+            android:screenOrientation="portrait" />
 
         <receiver android:name="edu.stu.tool.receiverSMS" >
             <intent-filter>
