解決鍵盤彈出蓋住 edittext 的問題

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".General"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
         <receiver android:name="edu.stu.tool.receiverSMS" >
             <intent-filter>
