--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,15 +30,16 @@
             android:name=".iHELP"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity
+            android:name=".IHelpActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".IHelpActivity"
-            android:screenOrientation="portrait" />
         <activity
             android:name=".PersonalData"
             android:screenOrientation="portrait" />
