--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,8 @@
         </activity>
         <activity
             android:name=".PersonalData"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".General"
             android:screenOrientation="portrait"
